# 3DLine-SLAM

./: 3DLines-SLAM启动方法  CMakeLists.txt  KeyFrameTrajectory.txt  README.md  TimeRecord.txt  configLIBS.h  configLIBS.h.in  vsfm_result.nvm
.kdev4/: 3DLines-SLAM.kdev4
Examples/Monocular/: XTU1.yaml  XTU1.yaml~  XTU2.yaml  XTU3.yaml  mono_euroc  mono_kitti  mono_kitti.cc  mono_tum  mono_tum.cc
include/: Converter.h  EDLineDetector.hh  KeyFrame.h  L3DPPing.h  LocalMapping.h  LoopClosing.h  Map.h  MapDrawer.h  MapPoint.h  System.h  Tracking.h  Viewer.h  commons.h  line3D.h  segment3D.h  universe.h  view.h
src/: Converter.cc  EDLineDetector.cpp  Initializer.cc  KeyFrame.cc  L3DPPing.cpp  LineDescriptor.cpp  LocalMapping.cc  LoopClosing.cc  Map.cc  MapDrawer.cc  MapPoint.cc  Optimizer.cc  System.cc  Tracking.cc  Viewer.cc  clustering.cc  line3D.cc  view.cc
testdata4/Line3D++/: Line3D++__W_640__N_10__sigmaP_5__sigmaA_10__epiOverlap_0.25__kNN_10__vis_3.txt  Line3D++__W_640__N_10__sigmaP_5__sigmaA_10__epiOverlap_0.25__kNN_10__vis_3.txt~
